--- a/BLModule/src/main/resources/connection.properties
+++ b/BLModule/src/main/resources/connection.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/contacts_list?autoReconnect=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 username=root
-password=*********
+password=dota21kmmr
