--- a/webModule/src/main/webapp/WEB-INF/web.xml
+++ b/webModule/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,10 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-
+  <resource-ref>
+    <description>DB Connection</description>
+    <res-ref-name>jdbc/Users</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
