--- a/BLModule/pom.xml
+++ b/BLModule/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>jndi</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
 </project>
