--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.9</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
