--- a/webModule/src/main/webapp/WEB-INF/web.xml
+++ b/webModule/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+
   <resource-ref>
     <description>DB Connection</description>
     <res-ref-name>jdbc/Users</res-ref-name>
